# CodexGPT

./: .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  assistantGUI  assistantGUI.py  cli.py  doc.go  go.mod  main.go  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
core/: logic.py
tests/: test_cli.py  test_logic.py
