[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-gui"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
